src/css/nav.css
.site-nav {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px 10px;
}

.site-nav-menu-wrapper {
  width: var(--nav-width);
  height: 100%;
  padding: 20px 0 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100;
  background-color: #fff4e9;
  font-family: Simpler, -apple-system, system-ui, sans-serif;
  transform: translateX(calc(-20px - var(--nav-width)));
  transition: all 0.3s ease;
}

.site-nav-menu {
  width: 100%;
  text-align: center;
}

.no-js .menu-btn {
  display: none;
}

.nav-logo {
  width: 150px;
  margin-bottom: 20px;
  border-radius: 50%;
  transition: all 0.3s;
}

.nav-logo:hover {
  box-shadow: 0 0 6px 0 #e67f25c7;
  transform: scale(1.05);
}

.site-nav-menu__link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 60px;
  color: #242424;
  font-size: 24px;
  font-weight: 400;
  text-decoration: none;
}

.site-nav-menu__link:hover {
  background: #fda66c;
}

.site-nav-menu__link:active {
  background: #afdefa;
  color: #47a3da;
}

.menu-active .site-nav-menu-wrapper {
  transform: translateX(0);
}

.menu-btn {
  height: 50px;
  width: 50px;
  background-color: transparent;
  background-repeat: no-repeat;
  background-image: url('/images/menu-icon.svg');
  background-position: 50%;
  background-size: 40px;
  border: none;
  cursor: pointer;
}

.nav-close-button {
  position: fixed;
  top: 0;
  height: 50px;
  width: 50px;
  background-color: transparent;
  background-repeat: no-repeat;
  background-image: url('/images/close-icon.svg');
  background-position: 50%;
  background-size: 40px;
  transition: all 0.3s;
  transform: translateX(-80px);
  border: none;
  outline: none;
}

.menu-active .nav-close-button {
  display: block;
  transform: translateX(calc(var(--nav-width) - 30px));
  z-index: 100;
  cursor: pointer;
}

.faded-background {
  position: fixed;
  visibility: hidden;
  top: 0;
  right: 0;
  height: 100%;
  width: 100%;
  z-index: 99;
  opacity: 0;
  background-color: rgba(48, 48, 48, 0.67);
  transition: opacity 0.25s ease-in;
}

.menu-active .faded-background {
  visibility: visible;
  opacity: 1;
}

.nav-footer-address {
  font-weight: 300;
  font-style: normal;
}

.nav-footer-social {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav-footer__link path {
  transition: all 0.3s;
}

.nav-footer__link--facebook:hover path {
  fill: #3b5998;
}

.nav-footer__link--instagram:hover path {
  fill: #833ab4;
}

.nav-footer__link:not(:last-of-type) {
  margin-right: 18px;
}

@media (min-width: 1024px) {
  .menu-btn,
  .nav-close-button {
    display: none;
  }

  .site-nav {
    position: unset;
    background-color: #fffdf4;
  }

  .site-nav-content {
    position: sticky;
    top: 20px;
    height: 95vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
  }

  .nav-logo {
    width: 220px;
    margin-bottom: 40px;
  }

  .site-nav-menu-wrapper {
    position: relative;
    transform: none;
    transition: none;
    background-color: transparent;
  }

  .site-nav-menu__link {
    font-size: 21px;
    transition: all 0.25s;
  }

  .site-nav-menu__link:hover {
    color: #000000;
    background: none;
    font-size: 23px;
  }

  .nav-footer__link--facebook svg {
    width: 10px;
  }

  .nav-footer__link--instagram svg {
    width: 17px;
  }
}

